--- a/drtf_data_aug.ipynb
+++ b/drtf_data_aug.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is rough a draft, inspired by (source: https://arxiv.org/pdf/1804.06812.pdf)\n",
+    "This is only a draft, inspired by (source: https://arxiv.org/pdf/1804.06812.pdf)\n",
     "\n",
     "\n",
     "We can also consider duplication /oversampling, but it will depend on the context of the task.\n",
